<resources>
    <string name="app_name">Android DatastorageAssignment</string>
    <string name="new_products_database">New Products Database</string>
    <string name="insert_new_item">Insert New Item</string>
    <string name="add_new_product_item">Add New Product Item</string>
    <string name="item_name">Item Name:</string>
    <string name="name">Name</string>
    <string name="item_description">Item Description:</string>
    <string name="description">Description</string>
    <string name="item_price">Item Price:</string>
    <string name="price">Price</string>
    <string name="item_review">Item Review:</string>
    <string name="review">Review</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search_item">Search Item</string>
    <string name="search_product_items">Search Product Items</string>
    <string name="search_term">Search Term</string>
    <string name="filter">Filter:</string>
    <string name="search1">Search</string>
    <string-array name="filter_arrays">
        <item>Name</item>
        <item>Description</item>
        <item>Price</item>
        <item>Review</item>
    </string-array>
</resources>
